# INSA-GL-Analyse-m-dicale

./: .gitignore  .travis.yml  CMakeLists.txt  MedAnalysis.sln  README.md
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
ClientMFC/: CClientMFCMain.cpp  CClientMFCMain.h  ClientMFC.cpp  ClientMFC.h  ClientMFC.rc  ClientMFC.vcxproj  ClientMFC.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
ClientMFC/res/: ClientMFC.rc2
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
ServerMFC/: CServerMFCMain.cpp  CServerMFCMain.h  ClientSocket.cpp  ClientSocket.h  ReadMe.txt  ServerListener.cpp  ServerListener.h  ServerMFC.cpp  ServerMFC.h  ServerMFC.rc  ServerMFC.vcxproj  ServerMFC.vcxproj.filters  resource.h  stdafx.cpp
ServerMFC/res/: ServerMFC.rc2
res/: dictionnaire
tests/Client/: CMakeLists.txt  ClientTests.vcxproj  ClientTests.vcxproj.filters  tests-models.cpp
tests/Server/: CMakeLists.txt  ServerTests.vcxproj  ServerTests.vcxproj.filters  tests-controllers.cpp  tests-models.cpp  tests-services.cpp  tests-storage.cpp  tests-utils.cpp
